8249605: C2: assert(no_dead_loop) failed: dead loop detected

Fixed dead loop detection in PhiNode::Ideal() to additionally account for dead MergeMemNodes

Reviewed-by: kvn, thartmann